[package]
name = "blinkenrgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytesize = "1.3.0"
futures = "0.3.29"
openrgb = "0.1.2"
rgb = "0.8.37"
serde = "1.0.191"
systemstat = "0.2.3"
tokio = { version = "1.33.0", features = ["macros", "time"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
